Restructured code for readability

--- a/notebooks/authentication/authenticator_scores.ipynb
+++ b/notebooks/authentication/authenticator_scores.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('experiments/auth/dense_leaky/independent.pkl', 'rb') as f:\n",
+    "with open('experiments/two_dense_leaky/independent.pkl', 'rb') as f:\n",
     "    pred_dict['independent'] = pickle.load(f)"
    ]
   },
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('experiments/auth/dense_leaky/multidimensional.pkl', 'rb') as f:\n",
+    "with open('experiments/two_dense_leaky/multidimensional.pkl', 'rb') as f:\n",
     "    pred_dict['multidimensional'] = pickle.load(f)"
    ]
   },
@@ -55,33 +55,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('experiments/auth/dense_leaky/mixture.pkl', 'rb') as f:\n",
+    "with open('experiments/two_dense_leaky/mixture.pkl', 'rb') as f:\n",
     "    pred_dict['mixture'] = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_metric_confidence_interval(y_pred, y_true, n_samples=1000, sample_size=500):\n",
-    "    tmp_metric_dict = {'accuracy': [], 'precision': [], 'recall': [], 'f1': []}\n",
+    "def calculate_metric_confidence_interval(y_pred, y_true, metric_fn, n_samples=1000, sample_size=500, **kwargs):\n",
+    "    metric_arr = []\n",
     "    for _ in range(n_samples):\n",
     "        idx = np.random.choice(len(y_pred), sample_size, replace=True)\n",
     "        y_pred_sample = [y_pred[i] for i in idx]\n",
     "        y_true_sample = [y_true[i] for i in idx]\n",
-    "        tmp_metric_dict['accuracy'].append(accuracy_score(y_true_sample, y_pred_sample))\n",
-    "        tmp_metric_dict['precision'].append(precision_score(y_true_sample, y_pred_sample, average='macro', zero_division=0))\n",
-    "        tmp_metric_dict['recall'].append(recall_score(y_true_sample, y_pred_sample, average='macro', zero_division=0))\n",
-    "        tmp_metric_dict['f1'].append(f1_score(y_true_sample, y_pred_sample, average='macro', zero_division=0))\n",
-    "\n",
-    "    ret_metric_dict = {}\n",
-    "    for metric, metric_arr in tmp_metric_dict.items():\n",
-    "        ci_lower, ci_upper, mean = np.percentile(metric_arr, [2.5, 97.5, 50])\n",
-    "        ret_metric_dict[metric] = (mean, ci_lower, ci_upper)\n",
-    "    \n",
-    "    return ret_metric_dict"
+    "        metric_arr.append(\n",
+    "            metric_fn(y_true_sample, y_pred_sample, **kwargs)\n",
+    "        )\n",
+    "    ci_lower, ci_upper, mean = np.percentile(metric_arr, [2.5, 97.5, 50])\n",
+    "    return mean, ci_lower, ci_upper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_with_confidence(y_pred, y_true, n_samples, sample_size):\n",
+    "    metric_dict = {}\n",
+    "    metric_dict['accuracy'] = calculate_metric_confidence_interval(y_pred, y_true, accuracy_score, n_samples=n_samples, sample_size=sample_size)\n",
+    "    metric_dict['f1'] = calculate_metric_confidence_interval(y_pred, y_true, f1_score, n_samples=n_samples, sample_size=sample_size)\n",
+    "    metric_dict['precision'] = calculate_metric_confidence_interval(y_pred, y_true, precision_score, n_samples=n_samples, sample_size=sample_size)\n",
+    "    metric_dict['recall'] = calculate_metric_confidence_interval(y_pred, y_true, recall_score, n_samples=n_samples, sample_size=sample_size)\n",
+    "    return metric_dict"
    ]
   },
   {
@@ -115,7 +124,7 @@
     "        print(f'Calculating confidence interval for {method} with {votes_dict[\"votes\"]} votes')\n",
     "        y_pred = votes_dict['y_pred']\n",
     "        y_true = votes_dict['y_true']\n",
-    "        tmp_dict = calculate_metric_confidence_interval(y_pred, y_true)\n",
+    "        tmp_dict = evaluate_with_confidence(y_pred, y_true)\n",
     "        tmp_dict['method'] = method\n",
     "        tmp_dict['votes'] = votes_dict['votes']\n",
     "        scores_arr.append(tmp_dict)"
